fixed button spacing on draggable modal, removed outlines on all buttons

--- a/app/assets/stylesheets/classify.styl
+++ b/app/assets/stylesheets/classify.styl
@@ -197,9 +197,10 @@
 
     .help-button, .bad-subject
       float left
+      margin-right 10px
 
       &:last
-        margin-left 10px
+        margin-right 0
 
 
 .bad-subject
@@ -210,11 +211,11 @@
     border none
     background-color darkred
     color white
-  
+
   &.marked-bad:before
     content '\2713   '
 
- 
+
 .help-modal
   width 500px
 
